src/test/run-pass/keyword-changes-2012-07-31.rs
// return -> return
// mod -> module
// match -> match

fn main() {
}

mod foo {
}

fn bar() -> int {
    match 0 {
      _ => { 0 }
    }
}